// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Zone grid coordinates converted to a physical location correctly 1`] = `
Object {
  "x": 30,
  "y": 528.4615384615385,
}
`;

exports[`Zone grid coordinates converted to a physical location correctly 2`] = `
Object {
  "x": 71.53846153846155,
  "y": 486.92307692307696,
}
`;

exports[`Zone grid coordinates converted to a physical location correctly 3`] = `
Object {
  "x": 528.4615384615385,
  "y": 30,
}
`;

exports[`Zone grid coordinates converted to a physical location correctly 4`] = `
Object {
  "x": 154.6153846153846,
  "y": 320.7692307692308,
}
`;

exports[`Zone grid coordinates converted to a physical location correctly 5`] = `
Object {
  "x": 30,
  "y": 646.6666666666666,
}
`;

exports[`Zone grid coordinates converted to a physical location correctly 6`] = `
Object {
  "x": 70,
  "y": 523.3333333333333,
}
`;

exports[`Zone grid coordinates converted to a physical location correctly 7`] = `
Object {
  "x": 150,
  "y": 30,
}
`;

exports[`Zone grid coordinates converted to a physical location correctly. Error handling. 1`] = `
Object {
  "x": 30,
  "y": 320.7692307692308,
}
`;

exports[`Zone grid coordinates converted to a physical location correctly. Error handling. 2`] = `
Object {
  "x": 430,
  "y": 30,
}
`;

exports[`Zone grid coordinates converted to a physical location correctly. Error handling. 3`] = `
Object {
  "x": 30,
  "y": 30,
}
`;
